--- a/src/app/main/message/inbox/declined/messageDeclined.html
+++ b/src/app/main/message/inbox/declined/messageDeclined.html
@@ -117,9 +117,12 @@
 
 								</span>
 							</div>
-
-							<div class="col-md-12 notification-details">{{item.response}}</div>
-
+							<div class="col-md-12 notification-details">{{item.response}}
+								<hr/>
+							</div>
+							<div class="col-md-12 margin-top-10">
+								<mailbox mail="item.communication" res="type"></mailbox>
+							</div>
 
 
 						</div>
