--- a/src/app/main/message/inbox/pending/messagePending.html
+++ b/src/app/main/message/inbox/pending/messagePending.html
@@ -125,9 +125,9 @@
 							<div class="col-md-12 notification-details">{{item.content}}</div>
 
 							<div class="col-md-12 margin-top-10">
-								<button type="button" class=" uppercase btn red input-rounded" ng-click="respondAction(item.com_id,'accepted')">
+								<button type="button" class=" uppercase btn red input-rounded" ng-click="respondAction(item.com_id,'accepted',item.user)">
 
-									<span ng-if="item.action != 'field'">YES</span>
+									<span ng-if="item.action != 'connect'">YES</span>
 									<span ng-if="item.action == 'field'"><span ng-if="item.field_name == 'photo_request'">Add Photo Requested </span>
 									<span ng-if="item.field_name == 'smoking'">Add Smoking   </span>
 									<span ng-if="item.field_name == 'drinking'">Add Smoking   </span>
@@ -143,48 +143,18 @@
 
 								</button>
 								&nbsp;
-								<button  type="button" ng-click="respondAction(item.com_id,'declined')" class=" uppercase btn btn-default input-rounded" ng-click="">
+								<button  type="button" ng-click="respondAction(item.com_id,'declined',item.user)" class=" uppercase btn btn-default input-rounded" ng-click="">
 									NOT INTERESTED
 								</button>
-
+<hr/>
 							</div>
 							<div class="col-md-12 margin-top-10">
-							<mailbox mail="item.communication" res="type"></mailbox>
+							<mailbox mail="item.communication" user="item.user" res="type" reverse="sendRespond(data)"></mailbox>
 								</div>
 
 
 						</div>
-<!--
-						<span ng-repeat="obj in item.communication.sent">
-							<hr/>
-						<div class="row" >
-							<div class="col-md-12 notification-style uppercase">ADD {{obj.field_name}} REQUEST</div>
 
-							<div class="col-md-12 notification-details">
-								<span ng-if="obj.field_name == 'smoking'">She has request you to add smoking details? </span>
-								<span ng-if="obj.field_name == 'drinking'">She has request you to add drinking details? </span>
-								<span ng-if="obj.field_name == 'education'">She has request you to add education details? </span>
-								<span ng-if="obj.field_name == 'income'">She has request you to add annual income? </span>
-								<span ng-if="obj.field_name == 'occupation'">She has request you to add education details? </span>
-								<span ng-if="obj.field_name == 'origin'">She has request you to add your Ancetral origin? </span>
-								<span ng-if="obj.field_name == 'family'">She has request you to add family type? </span>
-								<span ng-if="obj.field_name == 'family_status'">She has request you to add family status? </span>
-								<span ng-if="obj.field_name == 'about_family'">She has request you to add about your family? </span></div>
-
-							<div class="col-md-12 margin-top-10">
-								<button type="button" class=" uppercase btn red input-rounded" ng-click="">
-									ADD {{obj.field_name}}
-								</button>
-								&nbsp;
-								<button disabled="item.user.interest == 'sent'" type="button" class=" uppercase btn btn-default input-rounded" ng-click="">
-									NOT INTERESTED
-								</button>
-
-							</div>
-
-						</div>
-</span>
--->
 					</div>
 
 					<div class="row">
