--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -169,7 +169,7 @@
                                     </div>
                                 </div>
 
-                                <div class="row" ng-if="showInterestAction && data.interest == ''">
+                                <div class="row" ng-if="showInterestAction">
                                     <div class="vp-sub-action">
                                         <span>Connect her with ?</span>
 
@@ -179,7 +179,7 @@
                                         </span>
                                     </div>
                                 </div>
-                                <div class="row" ng-if="(showBlockAction && data.blocked == 'no') || data.interest == 'sent'">
+                                <div class="row" ng-if="showBlockAction">
                                     <div class="vp-sub-action">
                                         <span>Are you sure you want to block {{view.name}}?</span>
 
@@ -189,7 +189,7 @@
                                         </span>
                                     </div>
                                 </div>
-                                <div class="row" ng-if="(converstionCount > 0 && (showConversationAction && !showBlockAction && !showInterestAction) || (data.blocked == 'yes' && data.interest == 'sent'))">
+                                <div class="row" ng-if="showConversationAction">
                                 <div class="vp-commu">
                                         <div class="notification-style uppercase">
                                 <span ng-if="communication.action == 'connect'">Interest Sent
