--- a/src/app/navigation/matches/matchesNavigation.html
+++ b/src/app/navigation/matches/matchesNavigation.html
@@ -17,8 +17,8 @@
                                     ng-click="viewed()" >Viewed and not contacted</a></div>
                             <div><a ng-class="{ activetoolbar: mainlink =='shortlisted' }"
                                     ng-click="shortlisted()" >Shortlisted</a></div>
-                            <div><a ng-class="{ activetoolbar: mainlink =='mutalmatches' }"
-                                    ng-click="mutalmatches()" >Mutal matches</a></div>
+                            <!--<div><a ng-class="{ activetoolbar: mainlink =='mutalmatches' }"-->
+                                    <!--ng-click="mutalmatches()" >Mutal matches</a></div>-->
                         </div>
 
                     </li>
