--- a/src/app/toolbar/login/registrationToolbar.html
+++ b/src/app/toolbar/login/registrationToolbar.html
@@ -15,7 +15,7 @@
         <div class="caption  registration-details" style="text-align: center">
             <!--<span class="caption-subject  font-black bold uppercase">Registration</span>-->
 
-            <div class="caption-helper font-black font-sm sub-text" style="font-size: 14px;margin-bottom:10px;margin-top:10px">Please take a moment to complete all of the information
+            <div class="caption-helper font-black font-sm sub-text" style="font-size: 16px;font-weight:bold;margin-top:20px">Please take a moment to complete all of the information
                 below.
             </div>
         </div>
