--- a/src/app/main/registration/registration.html
+++ b/src/app/main/registration/registration.html
@@ -1,17 +1,17 @@
-<div class="col-md-12 margin-bottom-30 ">
+<div class="col-md-12 margin-bottom-30 " style="margin-top: 70px">
     <div class=" col-md-4 col-md-offset-4 ">
 
-        <div class="form-group margin-top-40">
+        <div class="form-group">
             <div class="col-md-12">
 
-            <label class="  font-weight"> Maritial Status<span style="color: red">*</span></label>
+            <label> Maritial Status<span style="color: red">*</span></label>
             <select class="form-control input-rounded "
                     ng-model="step2.marital_status">
                 <option value="">Select</option>
-                <option value="unmarried">Never Married</option>
+                <option value="never married">Never Married</option>
                 <option value="widow">Widowed</option>
                 <option value="divorced">Divorced</option>
-                <option value="awaitingdivorce">Awaiting divorce</option>
+                <option value="awaiting divorce">Awaiting divorce</option>
             </select>
             <span ng-if="showMS">
                         <div class="user-error-msg-arrow" ></div>
@@ -22,10 +22,10 @@
         <div class="form-group ">
             <div class="col-md-12">
 
-            <label class="  font-weight"> Caste<span style="color: red">*</span></label>
+            <label> Caste<span style="color: red">*</span></label>
             <select class="form-control input-rounded " ng-model="step2.caste"
                        >
-                <option selected="selected" value="">Select</option>
+                <option  value='0'>Select</option>
                 <option ng-repeat="obj in castList" value="{{obj.id_caste}}">{{obj.caste}}</option>
 
             </select>
@@ -40,10 +40,10 @@
         <div class="form-group ">
             <div class="col-md-12">
 
-            <label class="  font-weight"> Country Living In<span style="color: red">*</span></label>
+            <label> Country Living In<span style="color: red">*</span></label>
             <select class="form-control input-rounded " ng-model="step2.country"
                     ng-click="selectCountry()">
-                <option selected="selected" value="">Select</option>
+                <option value="0">Select</option>
                 <option ng-repeat="obj in countryList" value="{{obj.id_country}}">{{obj.country_name}}
                 </option>
             </select>
@@ -58,10 +58,10 @@
         <div class="form-group ">
             <div class="col-md-12">
 
-            <label class="  font-weight"> State Living In<span style="color: red">*</span></label>
+            <label > State Living In<span style="color: red">*</span></label>
             <select class="form-control input-rounded " ng-model="step2.state"
                     ng-click="selectState()">
-                <option selected="selected" value="">Select</option>
+                <option value="0">Select</option>
                 <option ng-repeat="obj in stateList" value="{{obj.id_state}}">{{obj.state_name}}</option>
             </select>
             <span ng-if="showState">
@@ -75,10 +75,10 @@
         <div class="form-group ">
             <div class="col-md-12">
 
-            <label class="  font-weight"> City Living In<span style="color: red">*</span></label>
+            <label > City Living In<span style="color: red">*</span></label>
             <select class="form-control input-rounded " ng-model="step2.city"
                     ng-click="selectCity(city)">
-                <option selected="selected" value="">Select</option>
+                <option value="0">Select</option>
                 <option ng-repeat="obj in cityList" value="{{obj.id_city}}">{{obj.city_name}}</option>
             </select>
             <span ng-if="showCity">
@@ -92,9 +92,9 @@
         <div class="form-group ">
             <div class="col-md-12">
 
-            <label class="  font-weight"> Height<span style="color: red">*</span></label>
+            <label > Height<span style="color: red">*</span></label>
             <select class="form-control input-rounded " ng-model="step2.height">
-                <option selected="selected" value="">Select</option>
+                <option value="0">Select</option>
                 <option  value="137">137 cms</option>
                 <option  value="138">138 cms</option>
                 <option  value="139">139 cms</option>
@@ -163,7 +163,7 @@
         <div class="form-group ">
             <div class="col-md-12">
 
-            <label class="font-weight"> Highest Education<span style="color: red">*</span></label>
+            <label> Highest Education<span style="color: red">*</span></label>
             <select class="form-control input-rounded " ng-model="setProfession.education"
                     ng-options="item.education for item in educationList track by item.id_education">
                 <option value="">Select</option>
@@ -179,7 +179,7 @@
         <div class="form-group ">
             <div class="col-md-12">
 
-            <label class="font-weight"> Occupation<span style="color: red">*</span></label>
+            <label> Occupation<span style="color: red">*</span></label>
             <select class="form-control input-rounded " ng-model="setProfession.occupation"
                     ng-options="item.occupation for item in occupation track by item.id_occupation">
                 <option value="">Select</option>
