--- a/src/app/main/dashboard/dashboard.html
+++ b/src/app/main/dashboard/dashboard.html
@@ -53,7 +53,7 @@
                                     <div class="col-md-12 margin-top-20"
                                          ng-if="messages[messageIndex].message == 'Add a photo now & get more responses.'">
                                         <div class="text-center">
-                                            <a class="btn red btn-lg alert-button" ui-sref="managephoto">
+                                            <a class="btn red btn alert-button" ui-sref="managephoto">
                                                 Upload
                                             </a>
                                         </div>
