--- a/src/app/main/registration/registration.html
+++ b/src/app/main/registration/registration.html
@@ -4,7 +4,7 @@
         <div class="form-group">
             <div class="col-md-12">
 
-            <label> Maritial Status<span style="color: red">*</span></label>
+            <label> Marital Status<span style="color: red">*</span></label>
             <select class="form-control input-rounded "
                     ng-model="step2.marital_status">
                 <option value="">Select</option>
@@ -31,7 +31,7 @@
             </select>
             <span ng-if="showCaste">
                         <div class="user-error-msg-arrow" ></div>
-                        <div class="user-error-msg" >Select division</div>
+                        <div class="user-error-msg" >Select Caste</div>
                     </span>
                 </div>
         </div>
@@ -170,7 +170,7 @@
             </select>
             <span ng-if="showEducation">
                         <div class="user-error-msg-arrow" ></div>
-                        <div class="user-error-msg" >Select highest education !</div>
+                        <div class="user-error-msg" >Select highest education</div>
                     </span>
                 </div>
         </div>
