--- a/src/app/toolbar/login/loginToolbar.html
+++ b/src/app/toolbar/login/loginToolbar.html
@@ -4,8 +4,8 @@
         <!-- BEGIN LOGO -->
         <div class="login-toolbar">
             <span style="margin-left:10%">
-            <a href="index.html">
-                <img src="/assets/img/logo.png" style="width:130px;margin-top:8px" alt="logo" class="logo-default"/> </a>
+            <a >
+                <img src="/assets/img/logo.png" style="width:180px;" alt="logo" class="logo-default"/> </a>
 </span>
 
              <span class="pull-right" style="margin-right:10%;line-height: 40px">
