--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -31,7 +31,7 @@
                                         <h4 class="heading"> Need Help</h4>
                                     </div>
                                     <div class="col-md-12">
-                                        <span class="description" ng-if="showLink"> <a ui-sref="customerCare">24X7 Live help</a> | <a ui-sref="contactUs">Contact Us</a> | <a ui-sref="feedback">Feedback</a> |<a ui-sref="businessEnquires">FAQ</a> </span>
+                                        <span class="description" ng-if="showLink"> <a ui-sref="customerCare" target="_blank">24X7 Live help</a> | <a ui-sref="contactUs" target="_blank">Contact Us</a> | <a ui-sref="feedback" target="_blank">Feedback</a> |<a ui-sref="businessEnquires" target="_blank">FAQ</a> </span>
                                         <span class="description" ng-if="!showLink"> <a>24X7 Live help</a> | <a >Contact Us</a> | <a >Feedback</a> |<a >FAQ</a> </span>
                                     </div>
                                 </div>
@@ -42,7 +42,7 @@
                                         <h4 class="heading"> Quick Link</h4>
                                     </div>
                                     <div class="col-md-12">
-                                        <span class="description"><a ui-sref="terms"> Privacy Policy</a>| <a ui-sref="terms">Terms of Use</a> | Advertise with us </span>
+                                        <span class="description"><a ui-sref="terms"  target="_blank"> Privacy Policy</a>| <a ui-sref="terms" target="_blank">Terms of Use</a> | Advertise with us </span>
                                     </div>
                                 </div>
                             </div>
