--- a/src/app/toolbar/login/termsToolbar.html
+++ b/src/app/toolbar/login/termsToolbar.html
@@ -7,7 +7,7 @@
             <div class="col-md-10">
                 <div class="page-logo1">
                     <a>
-                        <img src="/assets/img/logo.png" style="width:180px;margin-top:5px" alt="logo" class="logo-default"/> </a>
+                        <img src="/assets/img/logo.png" style="width:90%;margin-top:5px" alt="logo" class="logo-default"/> </a>
 
                 </div>
                 <!-- END LOGO -->
